# mysql-syncer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs  utils.rs
src/utils/: config.rs  ux.rs
